--- a/dashboard_shop.html
+++ b/dashboard_shop.html
@@ -142,7 +142,7 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto p-4 p-lg-0">
           <a href="index.html" class="nav-item nav-link">Home</a>
-          <a href="#" onclick="shop(document.getElementById('username').value)" class="nav-item nav-link">Shop</a>
+          <!-- <a href="#" onclick="shop(document.getElementById('username').value)" class="nav-item nav-link">Shop</a> -->
           <a href="setting_shop.html" class="nav-item nav-link">Setting</a>
         </div>
       </div>
